--- a/components/Login/Login.module.css
+++ b/components/Login/Login.module.css
@@ -1,3 +1,8 @@
+.gridContainer{
+background-color: rgb(236, 236, 236);
+border: 0.5px solid black;
+}
+
 .imgLogin {
     width: 95%; 
     height: 100%;
